--- a/projDevWeb-Main/login.html
+++ b/projDevWeb-Main/login.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title> Login </title> 
     <link rel="stylesheet" href="css/lgstyle.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="js/login.js"></script>
+    
    </head>
 <body>
     <header>
@@ -16,17 +19,17 @@
     <h2>Login</h2>
     <form action="#">
       <div class="input-box">
-        <input type="text" placeholder="E-Mail" required>
+        <input id="email" type="text" placeholder="E-Mail" required>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Senha" required>
+        <input id="senha" type="password" placeholder="Senha" required>
       </div>
 
       <!-- <div class="input-box button">
         <input type="Submit" value="Registrar">
       </div> -->
 
-      <a class="cta" href="areamedico.html"><button type= "button">Entrar</button></a>
+      <a id="btnlogin" class="cta"><button type= "button">Entrar</button></a>
 
       <div class="text">
         <h3>Ainda não tem conta conosco?<a href="registrar.html">Crie uma aqui</a></h3>
